--- a/cards.html
+++ b/cards.html
@@ -18,43 +18,57 @@
             <div class="icons-1"></div>
         </div>
         <div class="cards">
-            <div class="header"></div>
+            <div class="header">
+                <img src="/image.png" alt="image" class="image">
+            </div>
             <div class="title">Samule Robbinson</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-2"></div>
         </div>
         <div class="cards">
-            <div class="header"></div>
+            <div class="header">
+                <img src="/image.png" alt="image" class="image">
+            </div>
             <div class="title">Jerry Gomez</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-3"></div>
         </div>
         <div class="cards">
-            <div class="header"></div>
+            <div class="header">
+                <img src="/image.png" alt="image" class="image">
+            </div>
             <div class="title">Ron Lee</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-4"></div>
         </div>
         <div class="cards">
-            <div class="header"></div>
+            <div class="header">
+                <img src="/image.png" alt="image" class="image">
+            </div>
             <div class="title">Suzy Cole</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-5"></div>
         </div>
         <div class="cards">
-            <div class="header"></div>
+            <div class="header">
+                <img src="/image.png" alt="image" class="image">
+            </div>
             <div class="title">William Stewrt</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-6"></div>
         </div>
         <div class="cards">
-            <div class="header"></div>
+            <div class="header">
+                <img src="/image.png" alt="image" class="image">
+            </div>
             <div class="title">donald Richardson</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-7"></div>
         </div>
         <div class="cards">
-            <div class="header"></div>
+            <div class="header">
+                <img src="/image.png" alt="image" class="image">
+            </div>
             <div class="title">Alyssa Silva</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-8"></div>
