--- a/cards.html
+++ b/cards.html
@@ -1,77 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cards</title>
+    <title>Cards</title>    
     <link rel="stylesheet" href="/cards.css">
+    <script src="https://kit.fontawesome.com/a8d532f59b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main">
         <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="header head-1">
+                <i class="fa-brands fa-pinterest top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-1.png" alt="image" class="image">
             </div>
             <div class="title">Melinda Cola</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-1"></div>
+            <div class="icons-1">
+                <p>
+                    <i class="fa-brands fa-twitter footer-icons" ></i>
+                    <i class="fa-brands fa-linkedin footer-icons" ></i>
+                    <i class="fa-brands fa-dribbble footer-icons" ></i>
+                    <i class="fa-brands fa-instagram footer-icons" ></i>
+                    <i class="fa-brands fa-behance footer-icons" ></i>
+                </p>
+            </div>
         </div>
         <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="header head-2">
+                <i class="fa-brands fa-square-facebook top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-2.png.crdownload" alt="image" class="image">
             </div>
             <div class="title">Samule Robbinson</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-2"></div>
-        </div>
-        <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="icons-2">
+                <p>
+                    <i class="fa-brands fa-twitter footer-icons" ></i>
+                    <i class="fa-brands fa-linkedin footer-icons" ></i>
+                    <i class="fa-brands fa-dribbble footer-icons" ></i>
+                    <i class="fa-brands fa-instagram footer-icons" ></i>
+                    <i class="fa-brands fa-behance footer-icons" ></i>
+                </p>
             </div>
-            <div class="title">Jerry Gomez</div>
-            <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-3"></div>
         </div>
         <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="header head-3">
+                <i class="fa-brands fa-instagram top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-3.png" alt="image" class="image">
+            </div>
+            <div class="title" style="color:white ;">Jerry Gomez</div>
+            <div class="content" style="color: white;">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="icons-3">
+                <p>
+                    <i class="fa-brands fa-twitter footer-icons" ></i>
+                    <i class="fa-brands fa-linkedin footer-icons" ></i>
+                    <i class="fa-brands fa-dribbble footer-icons" ></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-behance footer-icons" ></i>
+                </p>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="header head-4">
+                <i class="fa-brands fa-behance top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-4.png" alt="image" class="image">
             </div>
             <div class="title">Ron Lee</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-4"></div>
+            <div class="icons-4">
+                <p>
+                    <i class="fa-brands fa-twitter footer-icons" ></i>
+                    <i class="fa-brands fa-linkedin footer-icons" ></i>
+                    <i class="fa-brands fa-dribbble footer-icons" ></i>
+                    <i class="fa-brands fa-facebook-f footer-icons" ></i>
+                    <i class="fa-brands fa-instagram footer-icons" ></i>
+                </p>
+            </div>
         </div>
         <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="header head-5">
+                <i class="fa-brands fa-dribbble top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-5.png" alt="image" class="image">
             </div>
             <div class="title">Suzy Cole</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-5"></div>
-        </div>
-        <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="icons-5">
+                <p>
+                    <i class="fa-brands fa-behance footer-icons" ></i>
+                    <i class="fa-brands fa-linkedin footer-icons" ></i>
+                    <i class="fa-brands fa-twitter footer-icons" ></i>
+                    <i class="fa-brands fa-facebook-f footer-icons" ></i>
+                    <i class="fa-brands fa-instagram footer-icons" ></i>
+                </p>
             </div>
-            <div class="title">William Stewrt</div>
-            <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-6"></div>
         </div>
         <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="header head-6">
+                <i class="fa-brands fa-twitter top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-6.png" alt="image" class="image">
+            </div>
+            <div class="title" style="color: white;">William Stewrt</div>
+            <div class="content" style="color: white;">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="icons-6">
+                <p>
+                    <i class="fa-brands fa-behance footer-icons" ></i>
+                    <i class="fa-brands fa-linkedin footer-icons" ></i>
+                    <i class="fa-brands fa-dribbble footer-icons" ></i>
+                    <i class="fa-brands fa-facebook-f footer-icons" ></i>
+                    <i class="fa-brands fa-instagram footer-icons" ></i>
+                </p>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="header head-7">
+                <i class="fa-brands fa-blogger top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-7.png" alt="image" class="image">
             </div>
             <div class="title">donald Richardson</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-7"></div>
+            <div class="icons-7">
+                <p>
+                    <i class="fa-brands fa-twitter footer-icons" ></i>
+                    <i class="fa-brands fa-linkedin footer-icons" ></i>
+                    <i class="fa-brands fa-dribbble footer-icons" ></i>
+                    <i class="fa-brands fa-facebook-f footer-icons" ></i>
+                    <i class="fa-brands fa-behance footer-icons" ></i>
+                </p>
+            </div>
         </div>
         <div class="cards">
-            <div class="header">
-                <img src="/image.png" alt="image" class="image">
+            <div class="header head-8">
+                <i class="fa-brands fa-linkedin top-icon"></i>
+                <input type="checkbox" class="inputcheckbox">
+                <img src="/images/image-8.png" alt="image" class="image">
             </div>
             <div class="title">Alyssa Silva</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
-            <div class="icons-8"></div>
+            <div class="icons-8">
+                <p>
+                    <i class="fa-brands fa-twitter footer-icons" ></i>
+                    <i class="fa-brands fa-behance footer-icons" ></i>
+                    <i class="fa-brands fa-dribbble footer-icons" ></i>
+                    <i class="fa-brands fa-facebook-f footer-icons" ></i>
+                    <i class="fa-brands fa-instagram footer-icons" ></i>
+                </p>
+            </div>
         </div>
     </div>
 </body>
