--- a/cards.html
+++ b/cards.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cards</title>    
-    <link rel="stylesheet" href="/cards.css">
+    <link rel="stylesheet" href="cards.css">
     <script src="https://kit.fontawesome.com/a8d532f59b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main">
         <div class="cards">
+            <input type="checkbox" class="inputcheckbox" id="card-one" style="display: none;">
+           <label for="card-one" class="label-1">
             <div class="header head-1">
-                <i class="fa-brands fa-pinterest top-icon"></i>
-                <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-1.png" alt="image" class="image">
+                <i class="fab fa-pinterest-p top-icon"></i>
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
+                <img src="images/image-1.png" alt="image" class="image">
             </div>
             <div class="title">Melinda Cola</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
@@ -27,15 +31,21 @@
                     <i class="fa-brands fa-behance footer-icons" ></i>
                 </p>
             </div>
+           </label>
         </div>
         <div class="cards">
+            <input type="checkbox" class="inputcheckbox" id="card-two" style="display: none;">
+           <label for="card-two" class="label-2">
             <div class="header head-2">
-                <i class="fa-brands fa-square-facebook top-icon"></i>
+                <i class="fab fa-facebook-f top-icon"></i>
                 <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-2.png.crdownload" alt="image" class="image">
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
+                <img src="images/image-2.png.crdownload" alt="image" class="image">
             </div>
             <div class="title">Samule Robbinson</div>
-            <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="content">Hello! I am Samule, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-2">
                 <p>
                     <i class="fa-brands fa-twitter footer-icons" ></i>
@@ -45,33 +55,45 @@
                     <i class="fa-brands fa-behance footer-icons" ></i>
                 </p>
             </div>
+            </label>
         </div>
         <div class="cards">
+            <input type="checkbox" class="inputcheckbox" id="card-three" style="display: none;">
+           <label for="card-three" class="label-3">
             <div class="header head-3">
                 <i class="fa-brands fa-instagram top-icon"></i>
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
                 <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-3.png" alt="image" class="image">
+                <img src="images/image-3.png" alt="image" class="image">
             </div>
-            <div class="title" style="color:white ;">Jerry Gomez</div>
-            <div class="content" style="color: white;">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="title">Jerry Gomez</div>
+            <div class="content">Hello! I am Jerry, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-3">
                 <p>
                     <i class="fa-brands fa-twitter footer-icons" ></i>
                     <i class="fa-brands fa-linkedin footer-icons" ></i>
                     <i class="fa-brands fa-dribbble footer-icons" ></i>
-                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-facebook-f footer-icons" ></i>
                     <i class="fa-brands fa-behance footer-icons" ></i>
                 </p>
             </div>
+           </label>
         </div>
         <div class="cards">
+           <input type="checkbox" class="inputcheckbox" id="card-four" style="display: none;">
+           <label for="card-four" class="label-4">
             <div class="header head-4">
                 <i class="fa-brands fa-behance top-icon"></i>
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
                 <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-4.png" alt="image" class="image">
+                <img src="images/image-4.png" alt="image" class="image">
             </div>
             <div class="title">Ron Lee</div>
-            <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="content">Hello! I am Lee, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-4">
                 <p>
                     <i class="fa-brands fa-twitter footer-icons" ></i>
@@ -81,12 +103,18 @@
                     <i class="fa-brands fa-instagram footer-icons" ></i>
                 </p>
             </div>
+           </label>
         </div>
         <div class="cards">
+           <input type="checkbox" class="inputcheckbox" id="card-five" style="display: none;">
+           <label for="card-five" class="label-5">
             <div class="header head-5">
                 <i class="fa-brands fa-dribbble top-icon"></i>
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
                 <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-5.png" alt="image" class="image">
+                <img src="images/image-5.png" alt="image" class="image">
             </div>
             <div class="title">Suzy Cole</div>
             <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
@@ -99,15 +127,21 @@
                     <i class="fa-brands fa-instagram footer-icons" ></i>
                 </p>
             </div>
+           </label>
         </div>
         <div class="cards">
+            <input type="checkbox" class="inputcheckbox" id="card-six" style="display: none;">
+            <label for="card-six" class="label-6">
             <div class="header head-6">
                 <i class="fa-brands fa-twitter top-icon"></i>
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
                 <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-6.png" alt="image" class="image">
+                <img src="images/image-6.png" alt="image" class="image">
             </div>
-            <div class="title" style="color: white;">William Stewrt</div>
-            <div class="content" style="color: white;">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="title">William Stewrt</div>
+            <div class="content">Hello! I am Stewrt, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-6">
                 <p>
                     <i class="fa-brands fa-behance footer-icons" ></i>
@@ -119,13 +153,18 @@
             </div>
         </div>
         <div class="cards">
+            <input type="checkbox" class="inputcheckbox" id="card-seven" style="display: none;">
+            <label for="card-seven" class="label-7">
             <div class="header head-7">
                 <i class="fa-brands fa-blogger top-icon"></i>
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
                 <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-7.png" alt="image" class="image">
+                <img src="images/image-7.png" alt="image" class="image">
             </div>
-            <div class="title">donald Richardson</div>
-            <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="title">Donald Richardson</div>
+            <div class="content">Hello! I am Richardson, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-7">
                 <p>
                     <i class="fa-brands fa-twitter footer-icons" ></i>
@@ -137,13 +176,18 @@
             </div>
         </div>
         <div class="cards">
+            <input type="checkbox" class="inputcheckbox" id="card-eight" style="display: none;">
+            <label for="card-eight" class="label-8">
             <div class="header head-8">
                 <i class="fa-brands fa-linkedin top-icon"></i>
+                <div class="custom-checkbox" >
+                    <div class="tick"></div>
+                </div>
                 <input type="checkbox" class="inputcheckbox">
-                <img src="/images/image-8.png" alt="image" class="image">
+                <img src="images/image-8.png" alt="image" class="image">
             </div>
             <div class="title">Alyssa Silva</div>
-            <div class="content">Hello! I am Cole, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
+            <div class="content">Hello! I am Silva, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
             <div class="icons-8">
                 <p>
                     <i class="fa-brands fa-twitter footer-icons" ></i>
