--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="custom-checkbox" >
                     <div class="tick"></div>
                 </div>
-                <img src="images/image-2.png.crdownload" alt="image" class="image">
+                <img src="images/image-2.png" alt="image" class="image">
             </div>
             <div class="title">Samule Robbinson</div>
             <div class="content">Hello! I am Samule, creating beautiful interfaces is my passion.I love reading,nature and music.</div>
